--- a/styles/base_components.scss
+++ b/styles/base_components.scss
@@ -6,8 +6,8 @@ button {
   border: 1px solid $black;
   color: $text-black;
   cursor: pointer;
-  margin: .5rem 0;
-  padding: .8rem 1.5rem;
+  margin: 0.5rem 0;
+  padding: 0.8rem 1.5rem;
   text-decoration: none;
 }
 
@@ -25,18 +25,20 @@ a {
   }
 }
 
-input, textarea {
-  border: 1px solid $gray-300;
+input,
+textarea {
+  border: 1px solid $gray-250;
   border-radius: $input-radius;
   color: $black;
   font-size: 1rem;
-  margin: .5rem 0;
-  padding: .8rem 1.5rem;
+  margin: 0.5rem 0;
+  padding: 0.8rem 1.5rem;
   width: 100%;
+  background-color: $gray-75;
 
   &::placeholder {
     color: $gray;
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
 
   &:focus {
